Give moiveid according to userID succeed

--- a/myMovie/templates/search_form.html
+++ b/myMovie/templates/search_form.html
@@ -9,6 +9,8 @@
     	<P> enter the user ID, we will give you the movie recommendation</P>
         <input type="text" name="userId">
         <input type="submit" value="Submit">
+        <P> the user ID is </P>
+        <h1>{{userId}}</h1>
         <h1>{{recomdMoive}}</h1>
     </form>
 </body>
