Add links of Movies

--- a/myMovie/templates/search_form.html
+++ b/myMovie/templates/search_form.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>Movie Recommendation</title>
 </head>
 <body>
     <form action="/search" method="get">
@@ -11,7 +11,9 @@
         <input type="submit" value="Submit">
         <P> the user ID is </P>
         <h1>{{userId}}</h1>
-        <h1>{{recomdMoive}}</h1>
+        <h1>{{recomdMovieId}}</h1>
+        <a>{{recomdMovieLk}}</a>
+
     </form>
 </body>
 </html>
