--- a/myMovie/templates/home.html
+++ b/myMovie/templates/home.html
@@ -14,10 +14,10 @@
   <div class="bg container-fluid text-center">
     <h1 style="color: #fff;">MovieLike</h1>
     </br>
-   <h4 style="color: #fff;">{{userId}}</h4>
-    <h4 style="color: #fff;">Are you ready? Please connect the sensor. :) </h4>
+    <h3 style="color: #fff;">{{userId}}</h3>
+    <!-- <h4 style="color: #fff;">Are you ready? Please connect the sensor. :) </h4> -->
 
-    <button type="button" class="btn btn-primary" > Yes </button>
+    <!-- <button type="button" class="btn btn-primary" > Yes </button> -->
     <!-- <ul>
 {% for athlete in athlete_list %}
     <li>{{ athlete.name }}</li>
