--- a/myMovie/templates/login.html
+++ b/myMovie/templates/login.html
@@ -5,23 +5,23 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link href="css/login.css" type="text/css" rel="stylesheet">
+	<link href="/../static/style/login.css" type="text/css" rel="stylesheet">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script scr="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></script>
 </head>
 
 <body>
-<div class="container-fluid bg">
+<div class="bg container-fluid">
 	<div class="row">
 		<div class="col-md-4 col-sm-4 col-xl-12"></div>
 		<div class="col-md-4 col-sm-4 col-xl-12">
 			<!-- form -->
-			<form class="form-container">
+			<form class="form-container"  action="/search" method="get">
 			<h1 align="center" >Log in</h1>
 		</br>
   				<div class="form-group">
-   					<label for="InputEmail">Email</label>
-  					<input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+   					<label for="InputEmail">User ID</label>
+  					<input class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter User ID" name = "userId">
   				</div>
  				<div class="form-group">
     				<label for="InputPassword">Password</label>
