--- a/myMovie/templates/login.html
+++ b/myMovie/templates/login.html
@@ -16,7 +16,7 @@
 		<div class="col-md-4 col-sm-4 col-xl-12"></div>
 		<div class="col-md-4 col-sm-4 col-xl-12">
 			<!-- form -->
-			<form class="form-container"  action="/search" method="get">
+			<form class="form-container"  action="/home" method="get">
 			<h1 align="center" >Log in</h1>
 		</br>
   				<div class="form-group">
@@ -31,7 +31,7 @@
   					<input type="checkbox" class="form-check-input" id="Check">
     				<label class="form-rememberMe-label" for="rememberMe">Remember me</label>
   				</div>
-  				<button type="submit" class="btn btn-primary btn-block"><a href="home.html" style="color: white">Submit</a></button>
+  				<button type="submit" class="btn btn-primary btn-block">Submit</button>
 				</br>
   				
   				<div>
