--- a/myMovie/templates/profile.html
+++ b/myMovie/templates/profile.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link href="css/global.css" type="text/css" rel="stylesheet">
+	<link href="/../static/style/global.css" type="text/css" rel="stylesheet">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script scr="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"></script>
 </head>
@@ -37,7 +37,7 @@
 				        	
 				         	<h3 align="left">Personal Infomation</h3>				     
 				         	<p align="left">
-				         		Account name: Esther<br/>	
+				         		User ID: {{userId}}<br/>	
 				         		Email: tangm@kean.edu<br/>
 				         		Password: ********<br/>	
 				         		Age: 20~25		         		
