Add logout button and fake profile page

--- a/myMovie/templates/home.html
+++ b/myMovie/templates/home.html
@@ -14,9 +14,14 @@
   <div class="bg container-fluid text-center"  >
     <h1 style="color: #fff;">MovieLike</h1>
     </br>   
-    <form action="/profile" method="get">
+    <form action="/login" method="get"> 
+    <button style="float: left;"  class="btn" >Logout</button>
+    </form>
       <h3 style="color: #fff;">{{userId}}</h3>
+
+    <form action="/profile" method="get">  
       <button style="float: left;"  class="btn btn-primary" type="submit">Profile</button>
+      
     </form>
     <!-- <button style="float: left;"  class="btn btn-primary" > Profile</button> -->
     <!-- <h4 style="color: #fff;">Are you ready? Please connect the sensor. :) </h4> -->
