--- a/myMovie/templates/profile.html
+++ b/myMovie/templates/profile.html
@@ -27,7 +27,7 @@
 				            <a class="nav-link active" href="#section1">Personal Infomation</a>          
 				            <a class="nav-link active" href="#section2">Your Taste</a>
 				            <a class="nav-link active" href="#section3">Movie Recommeded</a>
-				            <a class="nav-link active" href="./home.html">Home</a>
+				            <!-- <a class="nav-link active" href="./home.html">Home</a> -->
 				          </li>  
 				        </ul>
 				      </nav>
@@ -37,8 +37,7 @@
 				        	
 				         	<h3 align="left">Personal Infomation</h3>				     
 				         	<p align="left">
-				         		User ID: {{userId}}<br/>	
-				         		Email: tangm@kean.edu<br/>
+				         		User ID: cevia<br/>
 				         		Password: ********<br/>	
 				         		Age: 20~25		         		
 				            </p>
@@ -50,7 +49,7 @@
 				        	<ul class="list-group listInfo">
 						  	    <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Action</a>
       							<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Adventure</a>
-      							<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Adventure</a>     
+      							<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Comedy</a>     
 						        
 							</ul>
 				          
@@ -58,9 +57,9 @@
 				        <div id="section3"> 
 				          <h3 align="left">Movie Recommeded</h3>
 				        
-				            <img class="card-img-top cardImage listInfo" src="images/movie1.png" align="left" alt="Card image">				       
+				            <img class="card-img-top cardImage listInfo" src="/../static/images/movie1.png" align="left" alt="Card image">				       
 
-				            <img class="card-img-top cardImage listInfo" src="images/movie2.png" align="left" alt="Card image">
+				            <img class="card-img-top cardImage listInfo" src="/../static/images/movie2.png" align="left" alt="Card image">
 
 
 
